starting work on color system

--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Omedia Health</title>
+            <title>Omedia Health Log in</title>
             <link rel = "stylesheet" href="main.css">
             <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">        </head>
         <body>
