--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
                     </div>
                     
                     <div id="info1">
-                    <label for="weight">Desired weight Weight</label>
+                    <label for="weight">Desired Weight</label>
                     <input id="weight" type="text" placeholder="Weight" required>
 
                     <label for="meal">Desired meal</label>
@@ -37,7 +37,7 @@
                     <input id="activity" type="text" placeholder="Activity" required>
                     </div>
 
-                    <input class="first-page-buttons" id=button value="Register" type="submit" class="first-page-buttons">
+                    <input  id=button value="Register" type="submit" class="first-page-buttons">
                 </form>    
                 <a id="log" href="login.html">Log in</a>
             </div>
