--- a/profile.html
+++ b/profile.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Omedia Health Register</title>
+            <title>Omedia Health Profile</title>
             <link rel = "stylesheet" href="main.css">
             <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">        </head>
         <body>
             <nav>
                 <a class="omedia" href="">Omedia Health</a>
                 <div id="pages">
-                    <a href="meal.html">Meals</a>
-                    <a href="">Calories</a>
+                    <a href="weight.html">Weight</a>
+                    <a href="meal.html">Meal</a>
                     <a href="">Activity</a> 
                     <a href="profile.html">Profile Page</a>
                     <a href="login.html">Log out</a>
