--- a/first-page.html
+++ b/first-page.html
@@ -10,8 +10,8 @@
             </nav>
             <div id="container">
                 <div >
-                     <h1 class="welcome"id="first-welcome">Welcome to omedia Health!</h1>
-                    <p class="welcome"id="first-words">We hope you will enjoy our app!</p>
+                     <h1 class="welcome"id="first-welcome">Welcome to the media Health!</h1>
+                    <p class="welcome"id="first-words">We hope you will enjoy with our app!</p>
                 </div>
                <div id=buttons>
                   <button class="first-page-buttons" ><a href="register.html">Register</a></button>
