--- a/register.html
+++ b/register.html
@@ -30,10 +30,10 @@
                     <label for="weight">Desired Weight</label>
                     <input id="weight" type="text" placeholder="Weight" required>
 
-                    <label for="meal">Desired meal</label>
+                    <label for="meal">Desired Meal Calories </label>
                     <input id="meal" type="text" placeholder="Meal" required>
 
-                    <label for="activity">Desired Activity</label>
+                    <label for="activity">Desired Activities</label>
                     <input id="activity" type="text" placeholder="Activity" required>
                     </div>
 
